force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <label>Review</label>
    <pluralLabel>Reviews</pluralLabel>
    <nameField>
        <displayFormat>RV-{000000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Reseña de cliente creada desde un caso.</description>
</CustomObject>