force-app/main/default/objects/Review__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <type>Lookup</type>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <relationshipLabel>Reviews</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>