force-app/main/default/objects/Review__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Reviews</relationshipName>
    <relationshipLabel>Reviews</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>