force-app/main/default/objects/Review__c/fields/Guide_Score__c.field-meta.xml
<CustomField>
    <fullName>Guide_Score__c</fullName>
    <label>Guide Score</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>